  --------------------------  HepMC-2.03.06  --------------------------

2008-03-12  Lynn Garren
	
	* test: reduce size of input files
	
	* IO_HEPEVT: add trust_beam_particles and set_trust_beam_particles
	  methods so the user can specify that no beam particles are available.
	  This fixes a problem with pythia6 input when the user chooses "none".

2008-03-11  Lynn Garren

	* src/GenEvent.cc: The GenVertex pointer to the parent event was 
	  not properly moved when the operator= method was used to copy
	  a GenEvent.  That bug is now fixed.
	* GenVertex: added protected change_parent_event_ method for swap 
	  as part of bug fix.
	* test/testMultipleCopies.cc.in: Add explicit tests for operator=
	  and swap.
	  
	* examples: minor tweaks for readability

  --------------------------  HepMC-2.03.05  --------------------------

2008-02-22  Lynn Garren

	* fio/IO_HEPEVT.cc:  According to standard HepMC design, all vertices 
	in an event are expected to contain particles.  If, for instance, the
	first two particles have no parents, then they should simply not have 
	a production vertex.  However, in at least one instance empty production
	vertices were created for the first two particles. IO_HEPEVT now
	protects against this.


2008-02-18  Lynn Garren

	* HepMC/HEPEVT_Wrapper.h: fix calculation of the total size 
	of the common block

  --------------------------  HepMC-2.03.04  --------------------------

2008-02-05  Lynn Garren

	* test: use /bin/bash instead of /bin/sh in shell scripts
	
	* GenEvent, GenVertex, GenParticle: remove static counters
	These counters were only for the debugging convenience of the 
	HepMC code developer.  They were not accessible by users.

2008-02-04  Lynn Garren

	* fio/IO_HERWIG.cc: fix for Z0 mother-daughter problem (from Atlas)
	
	* HepMC/SimpleVector.h: Remove simple math methods

2007-01-29  Lynn Garren

	* examples/testHerwigCopies.cc: compare copies of Herwig events
