@@ -92,9 +92,9 @@ namespace HepMC {
 	/// write beam particle information
 	void          write_beam_particles( std::pair<HepMC::GenParticle *,HepMC::GenParticle *> );
 	/// write heavy ion information
-	void          write_heavy_ion( HeavyIon* );
+	void          write_heavy_ion( HeavyIon const * );
 	/// write PDF information
-	void          write_pdf_info( PdfInfo* );
+	void          write_pdf_info( PdfInfo const * );
 	/// write particle information
 	void          write_particle( GenParticle* p );
 	/// write particle data information
